# vocya

./: LICENSE  README.md  api.Dockerfile  dashboard.Dockerfile  vocya.code-workspace
.github/workflows/: dockerhub-description.yml  master.yml
api/: api.py  db_watcher.py  main.py  pyproject.toml  vocabulary_db.py
dashboard/: .gitignore  deploy.sh  generate-build-version.js  git-script.js  package.json
dashboard/public/: index.html  manifest.json  meta.json
dashboard/src/: App.css  App.js  index.js
dashboard/src/components/benkyou/: Benkyou.js
dashboard/src/components/chapters/: Chapter.js  ChapterItem.js  Chapters.js
dashboard/src/components/courses/: Course.js  CourseItem.js  Courses.js
dashboard/src/components/layout/: Alert.js  Navbar.js  Sidebar.css
dashboard/src/components/pages/: About.js
dashboard/src/components/prompt/: ConfirmBox.js  RouteLeavingGuard.js
dashboard/src/components/utils/: CacheBuster.js  Checkbox.js  Search.js  VocyaAPI.js
dashboard/src/components/words/: Search.js  Word.js  WordItem.js  Words.js
dashboard/src/context/: types.js
dashboard/src/context/vocya_api/: VocyaApiContext.js  VocyaApiState.js  vocyaApiReducer.js
gha/: Caddyfile  build-api-container.sh  build-container.sh
