[tool.black]
line-length = 119

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.12.0"
flask = "^2.2.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
